math-core/tests/snapshots/conversion_test__prime_command.snap
---
source: math-core/tests/conversion_test.rs
expression: "f^\\prime"
---
<math>
    <msup>
        <mi>f</mi>
        <mo>′</mo>
    </msup>
</math>
