math-core/tests/snapshots/conversion_test__prod.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\prod_i \\prod^n \\prod^n_i \\prod_i^n"
---
<math>
    <munder>
        <mo lspace="0">∏</mo>
        <mi>i</mi>
    </munder>
    <mover>
        <mo lspace="0">∏</mo>
        <mi>n</mi>
    </mover>
    <munderover>
        <mo lspace="0">∏</mo>
        <mi>i</mi>
        <mi>n</mi>
    </munderover>
    <munderover>
        <mo lspace="0">∏</mo>
        <mi>i</mi>
        <mi>n</mi>
    </munderover>
</math>
