math-core/tests/snapshots/conversion_test__quintuple_prime.snap
---
source: math-core/tests/conversion_test.rs
expression: "f'''''"
---
<math>
    <msup>
        <mi>f</mi>
        <mrow>
            <mo>′</mo>
            <mo>′</mo>
            <mo>′</mo>
            <mo>′</mo>
            <mo>′</mo>
        </mrow>
    </msup>
</math>
