math-core/tests/snapshots/conversion_test__really_standalone_underscore.snap
---
source: math-core/tests/conversion_test.rs
expression: _2
---
<math>
    <msub>
        <mrow>
        </mrow>
        <mn>2</mn>
    </msub>
</math>
