math-core/tests/snapshots/conversion_test__root_log.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\sqrt[\\log]{x}"
---
<math>
    <mroot>
        <mi>x</mi>
        <mo lspace="0" rspace="0">log</mo>
    </mroot>
</math>
