math-core/tests/snapshots/conversion_test__root_op.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\sqrt[+]{x}"
---
<math>
    <mroot>
        <mi>x</mi>
        <mo>+</mo>
    </mroot>
</math>
